Updated from a working one I had created
Added in and updated files and folders to see if that helps to launch our game